<resources>
    <string name="app_name">Timer Loop</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="loop">Loop</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="finished">Finished</string>
    <string name="resume">Resume</string>
    <string name="sound_icon_description">Sound</string>
</resources>